style.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
}

.background-img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  /* Resmin ekranı kaplamasını sağlar */
  z-index: -1;
  /* Resmi arka plana taşır */
  background-color: #000;
  /* Yüklenmeden önce siyah arka plan */
}

.content {
  position: relative;
  z-index: 1;
  text-align: center;
  color: white;
}

.link-container {
  background-color: #2d2d2dd9;
  /* Arka plan rengi (yarı saydam siyah) */
  padding: 10px 40px;
  /* İçerik ile kenarlık arasındaki boşluk */
  margin: 10px;
  /* Dikey boşluk */
  border-radius: 15px;
  /* Kenarları yuvarlatma */
  display: block;
  /* Linkleri alt alta dizmek için block olarak ayarlar */
  text-align: center;
  transition: background-color 0.3s;
  /* Arka plan rengi ve transform animasyonu */
  transform: scale(0.9);
}

.link-container:hover {
  transform: scale(1.08);
  background-color: rgba(255, 0, 0, 0.7);
  transition: transform 0.2s, background-color 0.2s;
}

@keyframes wiggle {
  0% {
    transform: scale(0.9) rotate(0deg);
  }

  20% {
    transform: scale(1.05) rotate(-3deg);
  }

  40% {
    transform: scale(1.08) rotate(3deg);
  }

  60% {
    transform: scale(1.05) rotate(-2deg);
  }

  80% {
    transform: scale(1.02) rotate(2deg);
  }

  100% {
    transform: scale(0.9) rotate(0deg);
  }
}

.background-box {
  font-size: 30px;
}

.background-box a {
  color: white;
  text-decoration: none;
}

.link-container.animate {
  background-color: rgba(255,
      0,
      0,
      0.7);
  /* Tıklama sırasında arka plan rengini değiştirir */
  transform: scale(0.98);
  /* Tıklama sırasında biraz küçülür */
}

